Fix insufficient color contrast

--- a/src/components/image-upload.css
+++ b/src/components/image-upload.css
@@ -51,5 +51,5 @@
 
 .image-upload__no-data {
   padding: 1rem;
-  color: #aaa;
+  color: #666;
 }
